syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.megaease.easeagent.sofarpc.proto";
option java_outer_classname = "HelloWorld";

package proto;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  message DateTime {
    string date = 1;
    string time = 2;
  }
  DateTime dateTime = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  HelloRequest.DateTime dateTime = 2;
}